[리뷰 컨트롤러 추가, 소설 상세 조회, 소설 장르 조회 추가]